# CIS4930_Python

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  STRUCTURE.md  app.py  cmake_install.cmake  library.cpp  requirements.txt  setup.cfg
src/: MANIFEST.in  README.rst  app.py  manage.py  setup.cfg  setup.py
src/graph/: CMakeCache.txt  CMakeLists.txt  Makefile  c_graph.cpp  cmake_install.cmake  csv_parser.cpp  csv_parser.py  forms.py  graph_dash.py  graph_lib.py  image_builder.py  models.py  urls.py  views.py
src/graph/templates/graph/: index.html  node_list.html
src/netview/: asgi.py  settings.py  urls.py  wsgi.py
src/sample/: init.py  run.py
src/templates/: graph_base.html  graph_context.html  icons.html  index.html  sidebar_base.html  sidebar_context.html  sidebar_form.html  upload_base.html
test/: Node Desc.csv  Node_Desc.csv  more_test_nodes.csv  test.csv  test_nodes.csv
