[metadata]
name = django-NetView
version = 0.1
description = A simple Django app to view and modify graphs on a web browser.
long_description = file: README.rst
url = https://github.com/danielgiampaolo/CIS4930_Python
author = Adrian Salazar
author_email = adrian.salazar@ufl.edu
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.07 
    Intended Audience :: Anyone
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

