[metadata]
name = django-NetView
version = 0.9991
description = A simple Django app to view and modify graphs on a web browser.
long_description = file: README.rst
url = https://github.com/danielgiampaolo/CIS4930_Python
author = Adrian Salazar
author_email = adrian.salazar@ufl.edu

[options]
include_package_data = true
packages = find:

