
[metadata]
name = django-NetView
version = 2.3
description = A simple Django app to view and modify graphs on a web browser.
long_description = file: README.rst
url = https://github.com/danielgiampaolo/CIS4930_Python
author = CIS4930 NetView Team
author_email = adrian.salazar@ufl.edu

[options]
include_package_data = true
packages = find:

